# diane_octomap

./: CMakeLists.txt  package.xml
files/: Escada_LEAD_5.bt  Escada_Principal_5.bt  Escada_Principal_5.ot
files/MapFiles/: Escada_Laser.bt  Escada_Laser.ot
files/MapFiles/BonsaiTree/: Escada_Kinect_1.bt  Escada_Kinect_Inclinada_5.bt  Escada_Kinect_Inclinada_5_2.bt  Escada_Kinect_Inclinada_7.bt  Escada_Laser_5.bt  Escada_Laser_5_Ajustada.bt  Escada_Laser_Horizontal_5.bt  Escada_Principal_Longe_5.bt  Escada_Principal_Mais_Longe_5.bt  escada_kinect_3.bt  escada_kinect_inclinado_1.bt  escada_kinect_inclinado_3.bt
files/MapFiles/Octree/: Escada_Kinect_3.ot  Escada_Kinect_Inclinada_3.ot  Escada_Kinect_Inclinada_5.ot  Escada_Kinect_Inclinada_5_2.ot  Escada_LEAD_5.ot  Escada_Laser_5.ot  Escada_Laser_5_Ajustada.ot  Escada_Principal_Longe_5.ot  Escada_Principal_Mais_Longe_5.ot  escada_kinect_1.ot  escada_kinect_inclinado_1.ot  escada_kinect_inclinado_7.ot  lab.thursday.21.30.ot  laser_escada_principal_longe.ot  laser_escada_principal_perto.ot
files/MapFiles/Octree/Utilizados/Laser/: Escada_Laser_Horizontal_5.ot
files/MapFiles/Octree/Vídeo/: Escada_video_objetos_5_final.ot
files/launch/: diane_octomap.launch  diane_octomap_with_parameters.launch  kinect.launch  octomap_server_main.launch
include/diane_octomap/: diane_octomap.h  diane_octomap_nodelet.h
msg/: StairArrayInfo.msg  StairInfo.msg  Stair_msg.msg
src/lib/: diane_octomap.cpp  diane_octomap_nodelet.cpp  nodelets_plugins .cpp
srv/: DetectStairs.srv  RequestStairDetection.srv
